--- a/Blog/home/templates/home.html
+++ b/Blog/home/templates/home.html
@@ -19,16 +19,25 @@
     <div class="container">
       <div class="row mb-5">
         <!-- blog item-->
+        {% for blog in blogs %}
         <div class="col-lg-4 col-sm-6 mb-4 hover-animate">
-          <div class="card shadow border-0 h-100"><a href="post.html"><img class="img-fluid card-img-top" src="https://images.pexels.com/photos/4101555/pexels-photo-4101555.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="..."/></a>
-            <div class="card-body"><a class="text-uppercase text-muted text-sm letter-spacing-2" href="#">Travel </a>
-              <h5 class="my-2"><a class="text-dark" href="post.html">Autumn fashion tips and tricks          </a></h5>
-              <p class="text-gray-500 text-sm my-3"><i class="far fa-clock mr-2"></i>January 16, 2016</p>
-              <p class="my-2 text-muted text-sm">Pellentesque habitant morbi tristique senectus. Vestibulum tortor quam, feugiat vitae, ultricies ege...</p><a class="btn btn-link pl-0" href="post.html">Read more<i class="fa fa-long-arrow-alt-right ml-2"></i></a>
+          <div class="card shadow border-0 h-100">
+            <a href="{% url 'blog_detail' blog.slug %}">
+              <img class="img-fluid card-img-top" src="/media/{{blog.image}}" alt="..."/>
+            </a>
+            <div class="card-body"><a class="text-uppercase text-muted text-sm letter-spacing-2" href="#">{{blog.user.username}} </a>
+              <h5 class="my-2">
+                <a class="text-dark" href="{% url 'blog_detail' blog.slug %}">{{blog.title}}</a>
+              </h5>
+              <p class="text-gray-500 text-sm my-3"><i class="far fa-clock mr-2"></i>{{blog.created_at}}</p>
+              <!-- <p class="my-2 text-muted text-sm">
+                {{blog.content | safe }}
+              </p> -->
+                <a class="btn btn-link pl-0" href="{% url 'blog_detail' blog.slug %}">Read more<i class="fa fa-long-arrow-alt-right ml-2"></i></a>
             </div>
           </div>
         </div>
-      
+        {% endfor %}
       
       </div>
       <!-- Pagination -->
