--- a/Blog/home/templates/base.html
+++ b/Blog/home/templates/base.html
@@ -48,6 +48,9 @@
               <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
                 <a class="btn btn-danger" href="{% url 'login_view' %}">Logout</a>
               </li>
+              <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
+                <a class="btn btn-primary" href="{% url 'see_blog' %}">Profile</a>
+              </li>
               {% else %}
               <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
                 <a class="btn btn-primary" href="{% url 'login_view' %}">Add Blog</a>
