implemented delete and update blog feature

--- a/Blog/home/templates/see_blog.html
+++ b/Blog/home/templates/see_blog.html
@@ -20,8 +20,8 @@
                 <td>{{blog.title}}</td>
                 <td>{{blog.created_at}}</td>
                 <td>
-                    <a href="#" class="btn btn-primary">Update</a>
-                    <a href="#" class="btn btn-danger">Delete</a>
+                    <a href="{% url 'update_blog' blog.slug %}" class="btn btn-primary">Update</a>
+                    <a href="{% url 'delete_blog' blog.id %}" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
             {% endfor %}
