--- a/Blog/home/templates/base.html
+++ b/Blog/home/templates/base.html
@@ -46,14 +46,14 @@
                 <a class="btn btn-info" href="{% url 'add_blog' %}">Publish</a>
               </li>
               <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-                <a class="btn btn-danger" href="{% url 'login_view' %}">Logout</a>
+                <a class="btn btn-danger" href="{% url 'logout_view' %}">Logout</a>
               </li>
               <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
                 <a class="btn btn-primary" href="{% url 'see_blog' %}">Profile</a>
               </li>
               {% else %}
               <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
-                <a class="btn btn-primary" href="{% url 'login_view' %}">Add Blog</a>
+                <a class="btn btn-primary" href="{% url 'login_view' %}">Login</a>
               </li>
               {% endif %}
             </ul>
