--- a/Blog/home/templates/see_blog.html
+++ b/Blog/home/templates/see_blog.html
@@ -4,6 +4,7 @@
 
 <section class="mt-3">
     <div class="container">
+        {% if blog_objs %}
         <table class="table">
             <thead class="thead-dark table-striped">
             <tr>
@@ -27,6 +28,9 @@
             {% endfor %}
             </tbody>
         </table>
+        {% else %}
+        <h2 class="text-center mt-5 mb-5">You do not have any Blogs published.</h2>
+        {%endif%}
     </div>
 </section>
 
