--- a/Blog/home/templates/home.html
+++ b/Blog/home/templates/home.html
@@ -7,9 +7,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="bg-white rounded-lg shadow p-5"><strong class="text-uppercase text-secondary d-inline-block mb-2 text-sm">Featured</strong>
-            <h2 class="mb-3">Escape the city today</h2>
-            <p class="text-muted">As am hastily invited settled at limited civilly fortune me. Really spring in extent an by. Judge but built party world. Of so am he remember although required. Bachelor unpacked be advanced at. Confined in declared marianne is vicinity</p><a class="btn btn-link p-0" href="post.html">Continue reading <i class="fa fa-long-arrow-alt-right"></i></a>
+          <div class="bg-white rounded-lg shadow p-5"><strong class="text-uppercase text-secondary d-inline-block mb-2 text-sm">Latest</strong>
+            <h2 class="mb-3"><a href="{% url 'blog_detail' latest.slug %}">{{latest.title}}</a></h2>
+            <p class="text-muted">{{latest.content | truncatewords_html:15 | safe }}</p><a class="btn btn-link p-0" href="{% url 'blog_detail' latest.slug %}">Continue reading <i class="fa fa-long-arrow-alt-right"></i></a>
           </div>
         </div>
       </div>
@@ -31,7 +31,7 @@
               </h5>
               <p class="text-gray-500 text-sm my-3"><i class="far fa-clock mr-2"></i>{{blog.created_at}}</p>
               <!-- <p class="my-2 text-muted text-sm">
-                {{blog.content | safe }}
+                {{blog.content | truncatewords_html:10 | safe}}
               </p> -->
                 <a class="btn btn-link pl-0" href="{% url 'blog_detail' blog.slug %}">Read more<i class="fa fa-long-arrow-alt-right ml-2"></i></a>
             </div>
@@ -41,12 +41,12 @@
       
       </div>
       <!-- Pagination -->
-      <nav aria-label="Blog pagination">
+      <!-- <nav aria-label="Blog pagination">
         <ul class="pagination justify-content-between mb-5">
           <li class="page-item"><a class="page-link text-sm rounded" href="#"> <i class="fa fa-chevron-left mr-1"></i>Older posts</a></li>
           <li class="page-item disabled"><a class="page-link text-sm rounded" href="#" tabindex="-1">Newer posts  <i class="fa fa-chevron-right ml-1"></i></a></li>
         </ul>
-      </nav>
+      </nav> -->
     </div>
   </section>
 
